# ros-speckle-filter

./: CMakeLists.txt  README.md  laser_filter_plugins.xml  package.xml
cfg/: SpeckleFilter.cfg
include/r1_laser_filter/: speckle_filter.h
src/: laser_scan_filter.cpp  speckle_filter.cpp
